Anonymous | Login | 2021-01-15 21:32 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0025953 | Community | [OCCT] OCCT:Modeling Algorithms | public | 2015-03-17 18:08 | 2015-05-14 16:31 | ||||
Reporter | Pawel | ||||||||
Assigned To | apn | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | [OCCT] 6.8.0 | ||||||||
Target Version | [OCCT] 6.9.0 | Fixed in Version | [OCCT] 6.9.0 | ||||||
Summary | 0025953: BRepMesh_PairOfIndex::Prepend - variable assigned twice | ||||||||
Description | In the lines: myIndex[1] = myIndex[0]; myIndex[1] = theIndex; the prependen index should probably be written into myIndex[0]. | ||||||||
Steps To Reproduce | Not applicable. Code analysis / no reproducer. | ||||||||
Tags | No tags attached. | ||||||||
Test case number | Not needed | ||||||||
Attached Files | |||||||||
![]() |
|
(0038446) git (administrator) 2015-03-17 18:15 |
Branch CR25953 has been created by Pawel. SHA-1: 100d4de75c7f9ad19b9897e4e6842af6ea3d0667 Detailed log of new commits: Author: Pawel Date: Tue Mar 17 16:15:21 2015 +0100 Corrected index assignment. |
(0038447) Pawel (developer) 2015-03-17 18:19 |
Branch CR25953 pushed. Please review. |
(0038759) git (administrator) 2015-03-20 17:21 |
Branch CR25953 has been updated forcibly by msv. SHA-1: 1d8454bb5c69978396bb40ded35981f384b00010 |
(0038760) msv (developer) 2015-03-20 17:29 |
Dear Pawel, Thank you for this bug fix. I have analyzed the source code and can confirm that this is a misprint and your fix is right. Though it does not make sense for current OCC algorithms, because the method Prepend is not called from anywhere. Concerning the patch preparation, I would ask you further to follow the rules listed in the "Contribution Workflow" guide, section "Resolving the issue" (http://dev.opencascade.org/doc/overview/html/occt_dev_guides__contribution_workflow.html#occt_contribution_workflow_2_4 [^]), in particular the third bullet. Now I have updated the branch as needed. |
(0038761) git (administrator) 2015-03-20 17:31 |
Branch CR25953 has been updated by msv. SHA-1: 165ff4ff24317fb464bbe3e52d48ac494037b79a Detailed log of new commits: Author: msv Date: Fri Mar 20 17:31:43 2015 +0300 Minor change in exception message. |
(0038764) msv (developer) 2015-03-20 17:33 |
Reviewed. Dear bugmaster, I think it is not necessary to perform tests, because the changed code is not used anywhere. |
(0038768) Pawel (developer) 2015-03-20 18:16 |
Dear msv, yes, I forgot to place the bug number in the comment. It's been a while since I committed something last time. I'll try to remember next time ;) Pawel |
(0038797) apv (tester) 2015-03-23 17:13 |
Dear BugMaster, Branch CR25953 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms. SHA-1: 165ff4ff24317fb464bbe3e52d48ac494037b79a Number of compiler warnings: occt component: Linux: 18 (18 on master) Windows: 0 (0 on master) products component: Linux: 11 (11 on master) Windows: 4 (4 on master) |
(0041032) git (administrator) 2015-05-14 16:31 |
Branch CR25953 has been deleted by inv. SHA-1: 165ff4ff24317fb464bbe3e52d48ac494037b79a |
![]() |
|||
occt: master a3ac9c24
Timestamp: 2015-03-26 12:26:16 Author: Pawel Committer: apn [ Details ] [ Diff ] |
0025953: BRepMesh_PairOfIndex::Prepend - variable assigned twice Corrected index assignment. Minor change in exception message. |
||
mod - src/BRepMesh/BRepMesh_PairOfIndex.hxx | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2015-03-17 18:08 | Pawel | New Issue | |
2015-03-17 18:08 | Pawel | Assigned To | => Pawel |
2015-03-17 18:15 | git | Note Added: 0038446 | |
2015-03-17 18:19 | Pawel | Note Added: 0038447 | |
2015-03-17 18:19 | Pawel | Assigned To | Pawel => msv |
2015-03-17 18:19 | Pawel | Status | new => resolved |
2015-03-17 18:19 | Pawel | Steps to Reproduce Updated | View Revisions |
2015-03-20 17:21 | git | Note Added: 0038759 | |
2015-03-20 17:29 | msv | Note Added: 0038760 | |
2015-03-20 17:31 | git | Note Added: 0038761 | |
2015-03-20 17:33 | msv | Note Added: 0038764 | |
2015-03-20 17:33 | msv | Assigned To | msv => bugmaster |
2015-03-20 17:33 | msv | Status | resolved => reviewed |
2015-03-20 17:35 | apv | Assigned To | bugmaster => apv |
2015-03-20 18:16 | Pawel | Note Added: 0038768 | |
2015-03-23 17:12 | apv | Test case number | => Not needed |
2015-03-23 17:13 | apv | Note Added: 0038797 | |
2015-03-23 17:13 | apv | Assigned To | apv => bugmaster |
2015-03-23 17:13 | apv | Status | reviewed => tested |
2015-03-27 17:42 | apn | Changeset attached | => occt master a3ac9c24 |
2015-03-27 17:42 | apn | Assigned To | bugmaster => apn |
2015-03-27 17:42 | apn | Status | tested => verified |
2015-03-27 17:42 | apn | Resolution | open => fixed |
2015-05-14 15:28 | aiv | Status | verified => closed |
2015-05-14 15:31 | aiv | Fixed in Version | => 6.9.0 |
2015-05-14 16:31 | git | Note Added: 0041032 |
Copyright © 2000 - 2021 MantisBT Team |