0025953: BRepMesh_PairOfIndex::Prepend - variable assigned twice

Corrected index assignment.
Minor change in exception message.